backend/_err.txt
Traceback (most recent call last):
  File "<string>", line 1, in <module>
    import sys;sys.stdout=open('_err.txt','w');sys.stderr=sys.stdout;from app.main import app;print('OK')
                                                                     ^^^^^^^^^^^^^^^^^^^^^^^^
  File "d:\_Projects\math_agent\backend\app\main.py", line 16, in <module>
    from .api.router import api_router
  File "d:\_Projects\math_agent\backend\app\api\router.py", line 13, in <module>
    from .tasks import tasks_router
  File "d:\_Projects\math_agent\backend\app\api\tasks.py", line 130
    stage, desc = node_meta.get(node_name, (node_name, f"÷ī––: {node_name}"))
IndentationError: unexpected indent
